--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body{
     background-color: antiquewhite;
     overflow: hidden;
     border-radius: 5px;
+    position:absolute;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .navbar_items a{
@@ -21,7 +26,7 @@ body{
     padding: 12px 12px;
     text-decoration: none;
     font-family: "Garamond", "sans-serif";
-    font-size:20px;
+    font-size:30px;
 }
 
 .navbar_items a:hover{
@@ -35,10 +40,12 @@ body{
 }
 
 .quotebook_box{
+    margin-top: 80px;
     width: 800px;
     display:flex;
     flex-direction:column;
     gap: 5px;
+    margin-left: 12px;
 }
 
 .quotebox_text, .login_header{
@@ -48,23 +55,43 @@ body{
 }
 .quotebook_title, .login_header, .signup_header{
     color: grey;
-    font-size: 50px;
+    font-size: 100px;
     margin-bottom:0px;
 }
 
 .subtitles{
     color: rgb(130, 127, 127);
-    margin-top:0px
+    margin-top:20px;
+    margin-left: 100px;
+    font-size: 30px;
 }
+.submitBtn{
+    margin: 15px;
+    padding: 20px 20px;
+    margin-right: 20px;
+    margin: 20px;
+    font-size: 30px;
+    background-color:cornsilk;
+    border:none;
+    border-radius: 30px;
+    color: rgb(130, 127, 127);
+}
+
+.submitBtn:hover{
+    cursor:pointer;
+    background-color:rgb(255, 220, 243);
+}
+
 
 .homeBtns{
     margin: 15px;
+    margin-top: 50px;
 }
 
 .loginBtn, .signUpBtn{
-    padding: 12px 12px;
-    margin: 5px;
-    font-size: 20px;
+    padding: 30px 30px;
+    margin: 20px;
+    font-size: 30px;
     background-color:cornsilk;
     border:none;
     border-radius: 30px;
@@ -80,20 +107,19 @@ body{
 }
 
 .searchbar{
-  margin-top: 130px;
-  margin-right: 90px;
+  margin-top: 300px;
+  margin-right: 100px;
   width: 100%;
-  max-width: 800px;
+  max-width: 900px;
   padding-right: 20px;
-  
 }
 
 .searchbar input[type="text"] {
  text-align:left;
- padding: 10px 50px;
- border-radius: 5px;
+ padding: 50px 60px;
+ border-radius: 30px;
  border:none;
- font-size: 14px;
+ font-size: 20px;
  width: 100%;
 }
 
@@ -131,6 +157,7 @@ input {
     justify-content: center;
     align-items: center;
     margin-bottom: 8rem;
+    padding-top: 30px;
 
 }
 
@@ -146,23 +173,31 @@ input {
     display:flex;
     justify-content: center;
     align-items: center;
+    position:relative;
+    flex-direction: row;
 
 }
 
 .dev {
     flex-grow: 1;
     padding: 1rem;
-
+    padding-bottom: 10px;
+    margin: 10px;
+    text-align: center;
 }
-
 
 .dev>p {
     text-align:center;
     text-decoration: none;
     font-family: "Copperplate", "Fantasy";
     font-size:1.5rem;
-
+    white-space:normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    max-width: 100%;
+    
 }
+
 
 .dev_description>h2 {
     text-align:center;
@@ -182,8 +217,120 @@ input {
 }
 
 
+@media only screen and (min-width: 992px) {
+    body { 
+        font-size: 18px; 
+        background-size: cover;
+    } 
+
+    .dev{
+        max-width: 400px;
+    }
+
+}
 
 
+@media screen and (max-width: 800px)
+{
+    .searchbar{
+    margin-top: 300px;
+    margin-right: 50px;
+    width: 100%;
+    padding-right: 20px;
+    }
+
+    .searchbar input[type="text"] {
+    text-align:left;
+    padding: 20px 20px;
+    border-radius: 30px;
+    border:none;
+    font-size: 15px;
+    width: 100%;
+    }
+
+    .submitBtn{
+        padding: 10px 10px;
+        margin: 20px;
+        font-size: 20px;
+        background-color:cornsilk;
+        border:none;
+        border-radius: 30px;
+        color:silver;
+    }
+
+    .homeBtns{
+    margin: 10px;
+    margin-top: 50px;
+    }
+
+    .loginBtn, .signUpBtn{
+    padding: 10px 10px;
+    margin: 20px;
+    font-size: 20px;
+    background-color:cornsilk;
+    border:none;
+    border-radius: 30px;
+    color:silver;
+    }
+
+
+}
+/* for smaller screen sizes*/
+@media screen and (max-width: 700px)
+{
+    .dev{
+        font-size: 12px;
+    }
+
+    .navbar_items a{
+    float:left;
+    display:block;
+    color:rgb(130, 127, 127);
+    text-align:center;
+    padding: 12px 12px;
+    text-decoration: none;
+    font-family: "Garamond", "sans-serif";
+    font-size:18px;
+    }   
+
+
+    .quotebook_title, .login_header, .signup_header{
+    color: grey;
+    font-size: 50px;
+    margin-bottom:0px;
+    }
+
+    .searchbar{
+    margin-top: 200px;
+    margin-right: 50px;
+    width: 100%;
+    padding-right: 20px;
+    }
+
+    .searchbar input[type="text"] {
+    text-align:left;
+    padding: 20px 30px;
+    border-radius: 30px;
+    border:none;
+    font-size: 14px;
+    width: 100%;
+    }
+
+    .homeBtns{
+    margin: 10px;
+    margin-top: 50px;
+    }
+
+    .loginBtn, .signUpBtn{
+    padding: 10px 10px;
+    margin: 20px;
+    font-size: 18px;
+    background-color:cornsilk;
+    border:none;
+    border-radius: 30px;
+    color:silver;
+    }
+}
 
 
 
