--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ body{
 }
 
 .login_header, .signup_header{
-    font-size:55px;
+    font-size: 55px;
 }
 
 .login_form, .signup_form{
@@ -142,6 +142,7 @@ body{
     padding: 25px;
     text-align: center;
     width: 300px;
+    font-size: 20px;
 }
 
 .login_form > h3, .signup_form > h3{
@@ -152,6 +153,12 @@ input {
     margin-bottom: 10px;
     padding: 10px;
     width: 60%;
+}
+
+.login-button, .signup-button{
+     background-color: pink;
+    border-radius: 10;
+    border-color: rgb(235, 195, 227);
 }
 
 
