--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ body{
  width: 100%;
 }
 
-/* Login and Sign Up Styling */
+/* Login and Sign Up Page Styling */
 
 .container, .login_header, .signup_header{
     display: flex;
