--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,18 @@ body{
     background-size: cover;
     background-position: center;
     min-height: 100vh;
-    overflow:hidden;
+
+
+    /* Hides the scrollbar for Firefox */
+    scrollbar-width: none;
+    
+    /* Hides the scrollbar for Internet Explorer and Edge */
+    -ms-overflow-style: none;
+}
+
+/* Hides the scrollbar for Chrome, Safari, and Opera */
+::-webkit-scrollbar {
+  display: none;
 }
 
 
@@ -162,17 +173,19 @@ input {
 }
 
 
+
 /* Quote Search Results Styling */
+
 .results-page {
     position: relative;
-    top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .results-page > h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+    margin-bottom: 1rem;
 }
 
 .results-content > p {
@@ -182,6 +195,40 @@ input {
 
 .results-content > .error-message {
     color: maroon;
+}
+
+.results-content ul {
+    list-style-type: none;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.results-content li {
+    background-color: ghostwhite;
+    border: 1px solid #b8b8b8;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 1rem 10%;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 7.5rem;
+}
+
+.results-content blockquote {
+    margin: 0;
+    font-family: "Garamond", "sans-serif";
+    font-size: 1.5rem;
+}
+
+.results-content cite {
+    font-family: "Garamond", "sans-serif";
+    font-size: 1.5rem;
+    /* font-style: normal; */
+    margin-top: auto;
+    text-align: right;
+    color: #444;
 }
 
 
@@ -194,7 +241,6 @@ input {
     justify-content: center;
     align-items: center;
     margin-bottom: 8rem;
-    padding-top: 30px;
 }
 
 .dev_team>h1 {
