--- a/src/index.css
+++ b/src/index.css
@@ -341,6 +341,35 @@ input {
     border-color: rgb(235, 195, 227);
 }
 
+
+.publishedQuotesBtn, .savedQuotesBtn, .logOutBtn{
+    background-color: rgb(242, 255, 192);
+    border-radius: 10px;
+    border-color: rgb(235, 195, 227);
+    margin: 30px;
+    text-decoration: none;
+    color:#aaa8a8;
+}
+
+/* Saved Quotes Styling */
+.saved-quotes-body ul {
+    list-style-type: none;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.savedQuoteElement{
+    background-color: ghostwhite;
+    border: 1px solid #b8b8b8;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 1rem 10%;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 7.5rem;
+}
 /* Feed Styling */
 
 .feed-container{
