--- a/src/index.css
+++ b/src/index.css
@@ -291,7 +291,7 @@ input {
     text-decoration: none;
     font-family: "Garamond", "sans-serif";
     font-size:1.5rem;
-    white-space:normal;
+    white-space:nowrap;
     word-wrap: break-word;
     overflow-wrap: break-word;
     max-width: 100%;
@@ -304,6 +304,19 @@ input {
     object-fit: cover;
 }
 
+.linkedin, .github{
+    width: 28px;
+    height: 28px;
+    margin-right: 6px;
+}
+
+.linkedin:hover{
+    filter: brightness(2);
+}
+
+.github:hover{
+    filter: invert(1);
+}
 
 .dev_description>h2 {
     text-align:center;
@@ -312,6 +325,7 @@ input {
     font-size: 3.5rem;
     color:grey;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .dev_description>p {
