--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,7 @@ footer {
     font-size: medium;
     vertical-align: super;
     color: rgb(96, 95, 95);
+    margin-bottom: 3.5%;
 }
 
 .trademark > span {
